--- a/NaviMap/gradle/wrapper/gradle-wrapper.properties
+++ b/NaviMap/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Nov 22 23:20:15 UZT 2017
+#Wed Nov 29 14:01:41 YEKT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
